--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <img class="img-circle" src="img/17.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>TOP PICTURES</h2>
           <p>In this section, we use the six pictures with the highest click-through rate as the most popular pictures.Update every Monday.</p>
-          <p><a class="btn btn-default" href="Big-Work2.html" role="button">View more &raquo;</a></p>
+          <p><a class="btn btn-default" href="2.html" role="button">View more &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="img-circle" src="img/16.jpg" alt="Generic placeholder image" width="140" height="140">
@@ -142,21 +142,21 @@
               <p><a class="btn btn-default" href="#" role="button">View more &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="img-circle" src="img/c4.jpg" alt="Generic placeholder image" width="140" height="140">
-                <h2>Role-playing Game</h2>
-                <p>A game in which the player plays one or several roles in the game and has a complete storyline. RPG games put more emphasis on plot development and personal experience. Generally speaking, RPG can be divided into two types: Japanese and American. The main difference lies in cultural background and combat methods.</p>
+                <img class="img-circle" src="img/19.jpg" alt="Generic placeholder image" width="140" height="140">
+                <h2>写真集</h2>
+                <p>这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
                 <p><a class="btn btn-default" href="#" role="button">View more &raquo;</a></p>
               </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="img/c5.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Adventure Game</h2>
-          <p>A game in which the player controls the game character for a virtual adventure. AVG's characteristic is that the storyline is often in the form of completing a task or solving certain puzzles, and deliberately emphasizes the importance of puzzles during the game.</p>
+          <img class="img-circle" src="img/20.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>日系少女</h2>
+          <p>这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
           <p><a class="btn btn-default" href="#" role="button">View more &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="img/DOTA.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>MOBA</h2>
-          <p>In this type of game, it is generally necessary to purchase equipment during battle. Players are usually divided into two teams. The two teams compete with each other on a scattered game map. Each player controls the selected character through an RTS-style interface.</p>
+          <img class="img-circle" src="img/21.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>短发</h2>
+          <p>这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
           <p><a class="btn btn-default" href="Big-work2.html" role="button">View more &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -168,11 +168,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading" style="margin-top: 0px;">ARK: Survival Evolved</h2>
-          <p class="lead">A group of people woke up on the mysterious beach. In order to survive and explore the ancient open world, players need to cooperate/compete to obtain the necessities of life. Players need to use strategies and tactics to tame various dinosaurs and other primitive creatures that appear in the game, and use them to cross sea, land and air and even enter the underground world. Players can use the in-depth role-playing system in this work to fully build their own character's strengths and obtain various items and pets.</p>
+          <h2 class="featurette-heading" style="margin-top: 0px;">JK永远滴神！！！</h2>
+          <p class="lead">这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="img/ARK.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/9.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -180,12 +180,11 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading" style="margin-top: 0px;">Grand Theft Auto V</span></h2>
-          <p class="lead">Los Santos, a huge and sunny city full of masters of self-salvation, corrupt officials, and down-to-earth celebrities, a group of envied residents of the Western world are also struggling to survive. The declining economy and cheap morals made chaos here.
-In the face of the rolling financial turmoil, three different freaks are drawing a blueprint for their survival and success. By chance, they came together. For everything they wanted, the three chose a series of bold and dangerous criminal actions.</p>
+          <h2 class="featurette-heading" style="margin-top: 0px;">黑暗系写真</span></h2>
+          <p class="lead">这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" src="img/GTA5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/14.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -193,11 +192,11 @@ In the face of the rolling financial turmoil, three different freaks are drawing
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading" style="margin-top: 0px;">PUBG</h2>
-          <p class="lead">The game has multiple maps for players to choose from. In each game, 100 players participate. Players parachute to all corners of the map, find weapons, vehicles and materials with bare hands, and start battles in a variety of terrains. To win, strategy is as important as marksmanship. During the game, there will be a blue "poison circle" expelling players to a smaller place to exchange fire. In each round of the game, the safe zone will be changed randomly, and the weapons and props obtained in each zone will appear randomly.</p>
+          <h2 class="featurette-heading" style="margin-top: 0px;">其他风格写真</h2>
+          <p class="lead">这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="img/pubg1.jpeg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/22.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -209,7 +208,7 @@ In the face of the rolling financial turmoil, three different freaks are drawing
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2020 Game Collector</p>
+        <p>&copy; 2021 宝贝卿</p>
       </footer>
 
     </div><!-- /.container -->
