--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2021 宝贝卿</p>
+        <p>&copy;版权所有 夺命母猩猩</p>
       </footer>
 
     </div><!-- /.container -->
