--- a/Big-Work2.html
+++ b/Big-Work2.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>卿の世界</title>
+	<title>Book class</title>
 	<!-- Bootstrap -->
 	<link href="plugins/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Font Awesome -->
