--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>卿の世界</title>
+    <title>Game Collector</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,22 +34,30 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">The world of wanqing Chen</a>
+              <a class="navbar-brand" href="#">A GAME COLLECTOR</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active" style="width: 100px; text-align: center;"><a href="#">Home</a></li>
-                <li><a href="Big-Work2.html">TOP PICTURE</a></li>
-                <li><a href="#about">&nbsp;JK制服&nbsp;</a></li>
-                <li><a href="#contact">&nbsp;自拍集&nbsp;</a></li>
-                <li><a href="#contact">&nbsp;写真集&nbsp;</a></li>
-                <li><a href="#contact">Others</a></li>
+                <li><a href="Big-Work2.html">TOP</a></li>
+                <li><a href="#about">ACT</a></li>
+                <li><a href="#contact">AVG</a></li>
+                <li><a href="#contact">STG</a></li>
+                <li><a href="#about">CAG</a></li>
+                <li><a href="">TAB</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> 匆匆那年 <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sports Game <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#"">《FIFA》</a></li>
+                        <li><a href="#">《NBA Live》</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> MOBA <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">童年碎片</a></li>
-                    <li><a href="#">高中岁月</a></li>
-                    <li><a href="#">大学时光</a></li>
+                    <li><a href="#">LOL</a></li>
+                    <li><a href="#">DOTA</a></li>
+                    <li><a href="#">D10</a></li>
                   </ul>
                 </li>
               </ul>
@@ -74,31 +82,31 @@
         <li data-target="#myCarousel" data-slide-to="2" style="bottom: 0px"></li>
       </ol>
         <div class="item active">
-          <img class="first-slide" src="img/7.jpg" alt="First slide">
+          <img class="first-slide" src="img/b1.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Welcome to the world of wanqing Chen</h1>
-              <p>On this page, you can learn any information about Chen Wanqing, about pictures, growth experience and future dreams</p>
+              <h1>Welcome to A Game Collector</h1>
+              <p>A GAME COLLECTOR is a non-profit game shop founded by individuals. There are hundreds of games for you to choose from.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Know more about</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="img/10.jpg" alt="Second slide">
+          <img class="second-slide" src="img/b2.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Love Life</h1>
-              <p>Life is a wise elder, and life is an erudite teacher. It often turns the breeze into the rain, moistening things silently to guide us and give us life enlightenment.</p>
+              <h1>Love Games</h1>
+              <p>Playing games is a very comfortable thing, it can relax our anxiety. Let you learn cooperation in the game and learn to enjoy life.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Start here</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="img/13.jpg" alt="Third slide">
+          <img class="third-slide" src="img/b3.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Make Friends</h1>
-              <p>There are all kinds of information, no matter what type of pictures you want, with this page, you can achieve your wishes. You can make friend with Wanqing Chen.</p>
+              <p>There are all kinds of games, no matter what type of game you want to play, with us, you can achieve your wishes. You can meet many friends and fight alongside them.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
             </div>
           </div>
@@ -124,39 +132,39 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="img/17.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>TOP PICTURES</h2>
-          <p>In this section, we use the six pictures with the highest click-through rate as the most popular pictures.Update every Monday.</p>
-          <p><a class="btn btn-default" href="20.html" role="button">View more &raquo;</a></p>
+          <img class="img-circle" src="img/csgo.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>TOP GAMES</h2>
+          <p>Here, we sorted out the six most popular games today based on game player data. You can play these games for free for one day, and then decide whether you need to buy them. Update every Monday.</p>
+          <p><a class="btn btn-default" href="Big-Work2.html" role="button">View more &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <img class="img-circle" src="img/16.jpg" alt="Generic placeholder image" width="140" height="140">
-            <h2>JK制服照</h2>
-            <p>The kid Wanqing Chen likes to take photos of Jk. In this compilation, you can admire a different kind of her.She who is different from everyone</p>
+            <img class="img-circle" src="img/pp6.jpg" alt="Generic placeholder image" width="140" height="140">
+            <h2>Strategy Game</h2>
+            <p>Players use strategies to compete with computers or other players to achieve various forms of victory in the game, or unify the country, or open up alien colonies. Strategy games can be divided into turn-based and real-time</p>
             <p><a class="btn btn-default" href="#" role="button">View more &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-              <img class="img-circle" src="img/18.jpg" alt="Generic placeholder image" width="140" height="140">
-              <h2>自拍照</h2>
-              <p>I like the moment I hug you tightly, just like getting the whole world.Every unhappy thing is like a bubble, as long as it meets the sun, it will disappear without a trace.</p>
+              <img class="img-circle" src="img/fifa.png" alt="Generic placeholder image" width="140" height="140">
+              <h2>Sports Game</h2>
+              <p>Games that simulate all kinds of competitive sports on the computer, with a wide variety of patterns and high degree of simulation, are very popular. For example, "FIFA" series, "NBA Live" series, "Live Football" series, etc.</p>
               <p><a class="btn btn-default" href="#" role="button">View more &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="img-circle" src="img/19.jpg" alt="Generic placeholder image" width="140" height="140">
-                <h2>写真集</h2>
-                <p>这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
+                <img class="img-circle" src="img/c4.jpg" alt="Generic placeholder image" width="140" height="140">
+                <h2>Role-playing Game</h2>
+                <p>A game in which the player plays one or several roles in the game and has a complete storyline. RPG games put more emphasis on plot development and personal experience. Generally speaking, RPG can be divided into two types: Japanese and American. The main difference lies in cultural background and combat methods.</p>
                 <p><a class="btn btn-default" href="#" role="button">View more &raquo;</a></p>
               </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="img/20.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>日系少女</h2>
-          <p>这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
+          <img class="img-circle" src="img/c5.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>Adventure Game</h2>
+          <p>A game in which the player controls the game character for a virtual adventure. AVG's characteristic is that the storyline is often in the form of completing a task or solving certain puzzles, and deliberately emphasizes the importance of puzzles during the game.</p>
           <p><a class="btn btn-default" href="#" role="button">View more &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="img/21.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>短发</h2>
-          <p>这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
+          <img class="img-circle" src="img/DOTA.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>MOBA</h2>
+          <p>In this type of game, it is generally necessary to purchase equipment during battle. Players are usually divided into two teams. The two teams compete with each other on a scattered game map. Each player controls the selected character through an RTS-style interface.</p>
           <p><a class="btn btn-default" href="Big-work2.html" role="button">View more &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -168,11 +176,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading" style="margin-top: 0px;">JK永远滴神！！！</h2>
-          <p class="lead">这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
+          <h2 class="featurette-heading" style="margin-top: 0px;">ARK: Survival Evolved</h2>
+          <p class="lead">A group of people woke up on the mysterious beach. In order to survive and explore the ancient open world, players need to cooperate/compete to obtain the necessities of life. Players need to use strategies and tactics to tame various dinosaurs and other primitive creatures that appear in the game, and use them to cross sea, land and air and even enter the underground world. Players can use the in-depth role-playing system in this work to fully build their own character's strengths and obtain various items and pets.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="img/9.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/ARK.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -180,11 +188,12 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading" style="margin-top: 0px;">黑暗系写真</span></h2>
-          <p class="lead">这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
+          <h2 class="featurette-heading" style="margin-top: 0px;">Grand Theft Auto V</span></h2>
+          <p class="lead">Los Santos, a huge and sunny city full of masters of self-salvation, corrupt officials, and down-to-earth celebrities, a group of envied residents of the Western world are also struggling to survive. The declining economy and cheap morals made chaos here.
+In the face of the rolling financial turmoil, three different freaks are drawing a blueprint for their survival and success. By chance, they came together. For everything they wanted, the three chose a series of bold and dangerous criminal actions.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" src="img/14.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/GTA5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -192,11 +201,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading" style="margin-top: 0px;">其他风格写真</h2>
-          <p class="lead">这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！这里真的不知道该写什么了！！！</p>
+          <h2 class="featurette-heading" style="margin-top: 0px;">PUBG</h2>
+          <p class="lead">The game has multiple maps for players to choose from. In each game, 100 players participate. Players parachute to all corners of the map, find weapons, vehicles and materials with bare hands, and start battles in a variety of terrains. To win, strategy is as important as marksmanship. During the game, there will be a blue "poison circle" expelling players to a smaller place to exchange fire. In each round of the game, the safe zone will be changed randomly, and the weapons and props obtained in each zone will appear randomly.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="img/22.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/pubg1.jpeg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -208,7 +217,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy;版权所有 夺命母猩猩</p>
+        <p>&copy; 2020 Game Collector</p>
       </footer>
 
     </div><!-- /.container -->
