--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Game Collector</title>
+    <title>江昊淇SB</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">A GAME COLLECTOR</a>
+              <a class="navbar-brand" href="#">江昊淇SB</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -133,7 +133,7 @@
       <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="img/csgo.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>TOP GAMES</h2>
+          <h2>江昊淇SB</h2>
           <p>Here, we sorted out the six most popular games today based on game player data. You can play these games for free for one day, and then decide whether you need to buy them. Update every Monday.</p>
           <p><a class="btn btn-default" href="Big-Work2.html" role="button">View more &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
