--- a/Big-Work3.html
+++ b/Big-Work3.html
@@ -42,7 +42,7 @@
                
                <div class="col-md-5 col-sm-12 col-xs-12 hidden-sm hidden-xs">
                   <div class="intro-img">
-                     <img src="img/c1.jpg" class="img-responsive img-rounded" alt="">
+                     <img src="img/1.jpg" class="img-responsive img-rounded" alt="">
                   </div>
                </div>
             </div>
