--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <li data-target="#myCarousel" data-slide-to="2" style="bottom: 0px"></li>
       </ol>
         <div class="item active">
-          <img class="first-slide" src="img/b1.jpg" alt="First slide">
+          <img class="first-slide" src="img/1.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Welcome to A Game Collector</h1>
@@ -132,10 +132,10 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="img/csgo.jpg" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="img/1.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>江昊淇SB</h2>
           <p>Here, we sorted out the six most popular games today based on game player data. You can play these games for free for one day, and then decide whether you need to buy them. Update every Monday.</p>
-          <p><a class="btn btn-default" href="Big-Work2.html" role="button">View more &raquo;</a></p>
+          <p><a class="btn btn-default" href="Big-Work2.html" role="button">小朋友点这里 &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="img-circle" src="img/pp6.jpg" alt="Generic placeholder image" width="140" height="140">
